# koralayer

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  README.md (append)  build.sh
cmake/: FindCMocka.cmake
docs/: PRD.md  README.md  syscalls.md
include/internal/: syscall_impl.h
include/kora/: syscalls.h
src/: syscalls.c  syscalls.c.old
src/linux/: syscalls_linux.c
src/macos/: syscalls_macos.c
src/windows/: syscalls_windows.c
tests/: CMakeLists.txt  Makefile  test_dir.c  test_dup.c  test_fileinfo.c  test_io.c  test_mmap.c  test_pipe.c  test_power.c  test_putc.c  test_rename.c  test_sbrk.c  test_sched.c  test_select.c  test_sem.c  test_signal.c  test_spawn.c  test_stat.c  test_time.c  test_unlink.c
